[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "rasterio>=1.4.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.0",
    "earthengine-api>=0.1.395",
    "geemap>=0.29.0",
    "xgboost>=2.0.3",
    "prophet>=1.1.5",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
    "geopandas>=0.14.3",
    "shapely>=2.0.3",
    "seaborn>=0.13.1",
    "matplotlib>=3.8.3",
    "statsmodels>=0.14.2",
]
